<resources>
    
    <string name="app_name">WanAndroid</string>
    
    <!-- 控件参数设置 -->
    <string name="tipSize">16sp</string>
    
    <!-- 闪屏 -->
    <string name="version">V1.0</string>
    
    <!-- 登录界面文字 -->
    <string name="back">返回</string>
    <string name="username">账号：</string>
    <string name="password">密码：</string>
    <string name="repassword">确认密码：</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="register_back">返回登录</string>
    <string name="auto_login">自动登录</string>
    <string name="user_not_empty">账号不能为空</string>
    <string name="pwd_not_empty">密码不能为空</string>
    <string name="pwd_too_short">密码不得低于6位数</string>
    <string name="repwd_not_same">两次输入的密码不一致</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="register_success">注册成功</string>
    <string name="register_fail">注册失败</string>
    <string name="login_please_login">请先登录</string>
    <string name="banner_collect">该模块暂不做收藏~</string>
    
    <!-- 首页界面文字 -->
    <string name="title_home">首页</string>
    <string name="title_system">广场</string>
    <string name="title_my">个人中心</string>
    <string name="double_click_exit">再按一次退出程序</string>
    <string name="collect_success">收藏成功</string>
    <string name="collect_fail">收藏失败</string>
    <string name="unCollect_success">取消收藏成功</string>
    <string name="unCollect_fail">取消收藏失败</string>

    <!-- 首页列表文字 -->
    <string name="get_data_error">加载失败</string>
    <string name="get_data_success">加载成功</string>
    <string name="get_data_zero">获取数据列表为0</string>
    <string name="type_null">类型为空</string>
    <string name="data_null">空空如也</string>
    
    <!-- 其他模块界面 -->
    <string name="gnmk">常用功能模块</string>
    <string name="rmss">热门搜索词汇</string>
    <string name="gzh">公众号推荐</string>
    <string name="zstx">知识体系</string>
    <string name="cywz">热门网址</string>
    <string name="xmtj">最新项目</string>
    
    <!-- 我的界面文字 -->
    <string name="not_login">点击登录</string>
    <string name="todo_text">待办事项</string>
    <string name="c_web_text">网址收藏</string>
    <string name="c_word_text">文章收藏</string>
    <string name="about">关于APP</string>
    <string name="logout">注销登录</string>

    <!-- webView相关 -->
    <string name="loading">加载中...</string>
    <string name="share_title">分享</string>
    <string name="like_title">收藏</string>
    <string name="share_article_url">%1$s分享【%2$s】：%3$s</string>

    <!-- 搜索界面相关 -->
    <string name="search_not_empty">搜索关键词不能为空</string>
    <string name="search_menu">搜索</string>

    <!-- todo相关 -->
    <string name="undone_todo">未完成</string>
    <string name="done_todo">已完成</string>
    <string name="add_title">添加待办</string>
    <string name="todo_title">输入TODO名称，如“完成作业”</string>
    <string name="todo_content">输入TODO事项，如："\n"1、数学作业"\n"2、语文作业"\n"3、化学作业"\n"4、英语作业"\n"......</string>
    <string name="todo_time">预定完成时间：</string>
    <string name="todo_kind">TODO类型</string>
    <string name="todo_work">工作</string>
    <string name="todo_play">娱乐</string>
    <string name="todo_sport">生活</string>
    <string name="todo_priority">优先级</string>
    <string name="priority_s">一般</string>
    <string name="priority_i">重要</string>
    <string name="title_tip">TODO标题不能为空！</string>
    <string name="content_tip">TODO内容不能为空！</string>
    <string name="last_one_type">请至少选择一种类型，默认使用工作类型</string>
    <string name="last_ont_p">请至少选择一种优先级，默认使用一般优先级</string>

    <!-- 关于软件-->
    <string name="app_introduce">软件简述</string>
    <string name="app_introduce_content">WanAndroid安卓客户端是根据张鸿洋老师的WanAndroid开放API使用Kotlin进行编写开发。WanAndroid项目收集了来自CSDN、掘金、简书等平台的热门Android技术博客，建立了丰富的安卓知识体系。是一个安卓开发者用于学习和技术积累的优良平台。欢迎各位Android开发者开发一个属于自己的WanAndroid项目！</string>
    <string name="app_home">WanAndroid主页：http://www.wanandroid.com/index</string>
    <string name="app_open_api">开放API地址：http://www.wanandroid.com/blog/show/2</string>
    <string name="app_git_src">本项目地址：https://github.com/xuboyu/WanAndroid</string>
    <string name="app_developer">关于开发者</string>
    <string name="app_developer_blog">csdn地址：https://blog.csdn.net/SSBBY</string>
    <string name="app_developer_git">gitHub：https://github.com/xuboyu</string>
    
</resources>
