<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/white"
            tools:text="@string/app_name" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/l1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_introduce"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_introduce_content" />

            <TextView
                android:id="@+id/tvHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/app_home"
                android:textColor="@color/text_color_primary"/>

            <TextView
                android:id="@+id/tvOpenApi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/app_open_api"
                android:textColor="@color/text_color_primary"/>

            <TextView
                android:id="@+id/tvSrc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/app_git_src"
                android:textColor="@color/text_color_primary"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/app_developer"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/tvBlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/app_developer_blog"
                android:textColor="@color/text_color_primary"/>

            <TextView
                android:id="@+id/tvGitHub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:foreground="?attr/selectableItemBackground"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/app_developer_git"
                android:textColor="@color/text_color_primary"/>

        </LinearLayout>

    </ScrollView>
</RelativeLayout>

