<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/view"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/android"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_edit"
            android:layout_below="@+id/view"
            android:layout_marginTop="@dimen/mt10"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_edit"
            android:layout_below="@+id/username_edit"
            android:layout_marginTop="@dimen/mt10"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/check_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_edit"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/ms50">

            <CheckBox
                android:id="@+id/auto_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/mt5"
                android:textColor="@color/black"
                android:text="@string/auto_login"
                android:layout_toEndOf="@id/auto_login"/>

        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/check_l"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50">

            <Button
                android:id="@+id/register"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/register"/>

            <Button
                android:id="@+id/login"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/login"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>