<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/view"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/android_login"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/username_edit"
            android:layout_below="@+id/view"
            android:theme="@style/CustomAppTheme_textinputLayout"
            android:layout_marginTop="@dimen/mt10"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:maxLines="1"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/pwd_edit"
            android:layout_below="@+id/username_edit"
            android:theme="@style/CustomAppTheme_textinputLayout"
            android:layout_marginTop="@dimen/mt10"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="@dimen/h50">

            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/repwd_edit"
            android:layout_below="@+id/pwd_edit"
            android:theme="@style/CustomAppTheme_textinputLayout"
            android:layout_marginTop="@dimen/mt10"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            android:layout_height="@dimen/h50">

            <EditText
                android:id="@+id/repwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repassword"
                android:maxLines="1"
                android:inputType="textPassword"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_below="@+id/repwd_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/h50"
            android:layout_marginTop="@dimen/mt20"
            android:layout_marginStart="@dimen/ms50"
            android:layout_marginEnd="@dimen/ms50">

            <Button
                android:id="@+id/back"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/back"
                android:textColor="@color/colorPrimary"
                android:background="@drawable/button_nocolor"/>

            <Button
                android:id="@+id/register"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/ms20"
                android:text="@string/register"
                android:textColor="@color/white"
                android:background="@drawable/button_color"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>